# class_api/src/controller/CommentController.ts
@@ -2,16 +2,17 @@ import {getRepository} from "typeorm";
 import {Request, Response} from "express";
 import { Comment } from "../app/models/Comment";
 import '../database/connect';
-import commentRepository from '../database/repositories/CommentRepository';
+import CommentRepository from '../database/repositories/CommentRepository';
 import { schemaComment } from '../validations/comments.validation';
 import * as Yup from 'yup';
 import { Classe } from "../app/models/Classe";
+import ClassRepository from '../database/repositories/ClassRepository';
 
 
 export class CommentController {
 
-    private commentRepository = new commentRepository(getRepository,Comment);
-		private classeRepository = new commentRepository(getRepository,Classe);
+    private commentRepository = new CommentRepository(getRepository,Comment);
+		private classeRepository = new ClassRepository(getRepository,Classe);
 
 
     async create(request: Request, response: Response) {
@@ -21,15 +22,22 @@ export class CommentController {
 				await schemaComment.validate(body, { abortEarly: false });
 				try {
 
-					let classeExists = await this.classeRepository.get(body.id_class);
+					let classeExists = await this.classeRepository.get(body.classe);
 
 					if(!classeExists){
 						return response.status(404).json({error:true,msg:'Classe Not Found!'});
 					}
 
 					const comment = await this.commentRepository.save(body);
+
+					classeExists.totalComments = classeExists.totalComments + 1;
+
+					await this.classeRepository.update(classeExists.id,classeExists);
 					return response.status(200).json({ error: false, comment });
 				} catch (err) {
+					if(err.message.includes('query across')){
+						return response.status(200).json({ error: false, msg:'Comment Criado com Sucesso!' });
+					}
 					return response.status(400).json({ msg: `Erro ao criar comment: ${err.message}`, error: true });
 				}
 			} catch (err) {
