# class_api/src/validations/comments.validation.ts
@@ -1,6 +1,6 @@
 import * as yup from 'yup';
 
 export const schemaComment = yup.object().shape({
-  id_class: yup.string().trim().min(1).required('O campo name é obrigatorio'),
+  classe: yup.string().trim().min(1).required('O campo name é obrigatorio'),
 	comment: yup.string().trim().min(1).required('O campo description é obrigatorio')
 });
